Closed Bug 1562489 Opened 7 years ago Closed 7 years ago

Sorting by Location in Library is broken in some cases

Categories

(Toolkit :: Places, defect, P3)

x86_64
Windows 7
defect
Points:
3

Tracking

()

VERIFIED FIXED
mozilla70
Iteration:
69.4 - Jun 24 - Jul 7
Tracking Status
firefox-esr60 --- wontfix
firefox-esr68 --- wontfix
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- verified

People

(Reporter: Virtual, Assigned: mak)

Details

(Keywords: nightly-community, reproducible)

Attachments

(3 files)

Attached image bug.png

STR:

  1. Start Firefox Portable with clean new fresh profile without any addons (extensions, plugins, themes, etc.)
  2. Restore bookmarks backup from "bookmarks-test.json" file
  3. Open Library (Ctrl+Shift+B keyboard shortcut)
  4. Go to Bookmarks Toolbar
  5. Press "Location" sorting button
  6. Scroll to bottom
    and see that something is not right

:Virtual, if you think that's a regression, then could you try to find a regression range in using for example mozregression?

Component: Bookmarks & History → Places
Product: Firefox → Toolkit

Oddly when I'm using sorting by "Location" (reversed), everything is sorted properly.

I can reproduce, the comparator in nsNavHistoryResult seems to do the right thing, thus I wonder if it's a bug of the treeview

Points: --- → 3
Priority: -- → P3

I remember there was a request to Sort By Name sort groups between separators, see bug 262329. Though, that follows a different code path, and should not involve folders. It should be unrelated because this is a temporary sorting in the view.

I think the problem here is just that location-less items should be put at the beginning (in ascending order), that's what most "explorers" do anyway. What we do today is just to fallback to sorting by name, that confuses the sorting result.
It should be an easy fix.

Assignee: nobody → mak77
Status: NEW → ASSIGNED
Iteration: --- → 69.4 - Jun 24 - Jul 7
Pushed by mak77@bonardo.net: https://hg.mozilla.org/integration/autoland/rev/255f27d1127e Sorting bookmarks by Location should put containers first. r=Standard8
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70

AFAICT this is an old issue which we probably don't need to worry about backporting, but feel free to nominate the patch for Beta approval if you feel strongly otherwise.

Flags: in-testsuite+

I'm confirming that bug is fixed, starting in Mozilla Firefox Nightly 70.0a1 (2019-07-11), so I'm marking this bug as VERIFIED.
Thank you very much! \o/

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: