Bug 1562489 - Sorting bookmarks by Location should put containers first. r=Standard8

Differential Revision: https://phabricator.services.mozilla.com/D37068